Improved the link spacing in step challenges. Minor fixes.

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -286,6 +286,8 @@ a {
   
   font-size: 1.2em;
   text-decoration: underline;
+  margin-left: 9px;
+  margin-right: 5px;
 }
 
 .challenge-step b, .challenge-step strong, .challenge-step em, {
@@ -296,6 +298,8 @@ a {
   
   font-size: 1.2em;
   text-decoration: underline;
+  margin-left: 9px;
+  margin-right: 5px;
 }
 
 .challenge-project b, .challenge-project strong, .challenge-project em, {
